--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,20 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+title: "Filippo Rossi"
+username: "Qu4k"
+profile_picture: "/assets/img/profile.png"
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+email: "filippo@filipporossi.me"
+description: >-
+  Personal portfolio and blog. Posts about programming and
+  gamedev.
+baseurl: ""
+url: "https://filipporossi.me"
+twitter_username: "f28rossi"
+github_username: "qu4k"
+keybase_username: "filipporossi"
+rss: "RSS Feed"
+
+# Post settings
+show_excerpts: true
 
 # Build settings
 markdown: kramdown
