--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Filippo Rossi"
 username: "Qu4k"
-profile_picture: "/assets/img/profile.png"
+profile_picture: "/assets/img/profile.jpg"
 
 email: "filippo@filipporossi.me"
 description: >-
