Update Twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: >-
   gamedev.
 baseurl: ""
 url: "https://filipporossi.me"
-twitter_username: "f28rossi"
+twitter_username: "filipporeds"
 github_username: "qu4k"
 keybase_username: "filipporossi"
 rss: "RSS Feed"
