chore: update pfp

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Filippo Rossi"
 username: "Qu4k"
-profile_picture: "/assets/img/profile.jpg"
+profile_picture: "https://gravatar.com/avatar/c6f9b5cada1f83e998c40ed89a929990?s=400&d=robohash&r=x"
 
 email: "filippo@filipporossi.me"
 description: >-
