chore: update name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,6 @@ jobs:
       uses: actions-js/push@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        coauthor_email: qu4k@users.noreply.github.com
-        coauthor_name: qu4k
+        coauthor_email: filipporeds@users.noreply.github.com
+        coauthor_name: filipporeds
         empty: true
