chore: update username

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Filippo Rossi"
-username: "Qu4k"
+username: "filipporeds"
 profile_picture: "https://gravatar.com/avatar/c6f9b5cada1f83e998c40ed89a929990?s=400&d=robohash&r=x"
 
 email: "filippo@filipporossi.me"
@@ -9,7 +9,7 @@ description: >-
 baseurl: ""
 url: "https://filipporossi.me"
 twitter_username: "filipporeds"
-github_username: "qu4k"
+github_username: "filipporeds"
 keybase_username: "filipporossi"
 rss: "RSS Feed"
 
